--- a/css/rpncalc.css
+++ b/css/rpncalc.css
@@ -55,9 +55,26 @@ td.button {
   text-align: center;
 }
 
+.btnFont {
+  font-size: 25px;
+  border: 4px;
+}
+.btnMathText {
+    color: #green;
+}
+.btnFnText {
+  color:#orange;
+}
+.btnClrText {
+    color: #yellow;
+}
+.btnRetText {
+    color: #blue;
+}
+.btnNumText{
+    color:white;
+}
 #calc {
-  font-size: 250%;
-
   display: box;
   display: -webkit-box;
   display: -moz-box;
@@ -70,15 +87,25 @@ td.button {
 }
 
 .display {
-  width: 100%;
+  width: 96%;
   height: 10%;
+  margin: 2% 2% 1% 2%;
 
+  border-radius: 4px;
+}
+.result{
+  top: 25%;
+  right: 1%;
   text-align: right;
+  font-size: 25px;
+  font-weight: bold;
+  position: relative;
 }
 
 .pad {
-  width: 100%;
-  height: 90%;
+  width: 98%;
+  height: 88%;
+  padding: 1%;
 
   display: box;
   display: -webkit-box;
@@ -98,7 +125,7 @@ td.button {
 
 .row {
   text-align: center;
-  min-height: 20%;
+  height: 20%;
 
   display: box;
   display: -webkit-box;
@@ -149,3 +176,15 @@ td.button {
   display: -ms-box;
 }
 
+/* for small-width screen: 640 x960 horizontal & vertical */
+@media only screen and (max-width: 800px) and (max-height: 800px) {
+.result, .btnFont {
+  font-size: 18px;
+}
+}
+/* for smaller-width screen: 800x480 horizontal or vertical */
+@media only screen and (max-width: 480px) and (max-height:480px) {
+.result, .btnFont {
+  font-size: 12px;
+}
+}
