--- a/css/themes/green.css
+++ b/css/themes/green.css
@@ -6,19 +6,44 @@
  */
 
 html, body, #calc {
-   font-family: 'Orbitron', 'Ubuntu', 'Shanti', sans-serif;
+   font-family: 'Shanti', 'Ubuntu', sans-serif;
 }
 
 #calc {
-  background-color: rgba(180,210,180,1);
+  background-color: #232E28;
 }
 
 .display {
-  background-color: lightyellow;
+  background-color: #7A987E;
+}
+.result {
+  color: #A75734;
+}
+.pad {
+  background-color: #232E28;
 }
 
-.pad {
-  background-color: rgba(180,210,180,1);
+.btnMathText {
+    color: #1dd419;
+}
+.btnClrText {
+    color: #A75734;
+}
+.btnRetText {
+    color: #a8ea29;
+}
+.btnNumText {
+    color: white;
+}
+.btnText {
+    color: white; /*#B1B3C0;*/
+}
+
+.btnFnText {
+    color: #A75734; /*#CCC486;*/
+}
+.btnThemeText {
+    color: #CCC486;
 }
 
 .row {
@@ -36,22 +61,30 @@ html, body, #calc {
 }
 
 .button {
-  background-color: rgba(100,240,180,1);
-  border: none;
-  border-radius: 50px;
+    margin: 4px;
 
-  transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  margin: 2px;
+    background: -moz-linear-gradient(top,#7A987E 0%,#000000);
+    background: -webkit-gradient(linear, left top, left bottom, 
+        from(#7A987E),to(#000000));
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius:6px;
+    border: 1px outset #e5e3e3;
+    -moz-box-shadow:2px 1px 4px 2px rgba(150,150,150,0.3),
+                    /*inset 0px 0px 1px rgba(255,000,217,1);*/
+                    inset 2px 2px 3px 0 #3d3b3b;
+    -webkit-box-shadow:2px 1px 4px 2px rgba(150,150,150,0.3),
+                    inset 2px 2px 3px 0 #3d3b3b;
+    box-shadow:2px 1px 5px 2px rgba(150,150,150,0.3),
+                    inset 3px 3px 4px 0 #3d3b3b;
+    text-shadow:0px -1px 0px rgba(000,000,000,0.2),0px 1px 0px rgba(255,255,255,0.3);
 }
 
 .button:hover {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
-  background-color: rgba(220,240,180,1);
+  background-color: #6D5258;/*(rgba(220,240,180,1);*/
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
 }
