--- a/css/themes/green.css
+++ b/css/themes/green.css
@@ -64,8 +64,8 @@ html, body, #calc {
     margin: 4px;
 
     background: -moz-linear-gradient(top,#7A987E 0%,#000000);
-    background: -webkit-gradient(linear, left top, left bottom, 
-        from(#7A987E),to(#000000));
+    background: -webkit-gradient(linear, left top, left bottom, from(#7A987E),to(#000000));
+    background: -ms-linear-gradient(top, #7A987E, #000000);  /* IE10 */
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius:6px;
@@ -84,7 +84,9 @@ html, body, #calc {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;  /* IE10 */
   background-color: #6D5258;/*(rgba(220,240,180,1);*/
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
+  transform: scale(1.2); /* IE10 */
 }
