--- a/css/themes/mobile.css
+++ b/css/themes/mobile.css
@@ -39,7 +39,7 @@ html, body, #calc {
     background: -moz-linear-gradient(top, #4c4c4c 0%, #666666 0%, #2c2c2c 6%, #666666 11%, #grey 60%, #666666 94%, #131313 100%); /* FF3.6+ */
     background: -webkit-linear-gradient(top, #4c4c4c 0%,#666666 0%,#2c2c2c 6%,#666666 11%,#grey 60%,#666666 94%,#131313 100%); /* Chrome10+,Safari5.1+ */
     background: -o-linear-gradient(top, #4c4c4c 0%,#666666 0%,#2c2c2c 6%,#666666 11%,#grey 60%,#666666 94%,#131313 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #4c4c4c 0%,#666666 0%,#2c2c2c 6%,#666666 11%,#grey 60%,#666666 94%,#131313 100%); /* IE10+ */
+    background: -ms-linear-gradient(top, #4c4c4c 0%,#666666 0%,#2c2c2c 6%,#666666 11%,grey 60%,#666666 94%,#131313 100%); /* IE10+ */
     background: linear-gradient(to bottom, #4c4c4c 0%,#666666 0%,#2c2c2c 6%,#666666 11%,#grey 60%,#666666 94%,#131313 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
 }
@@ -64,8 +64,8 @@ html, body, #calc {
     margin: 4px;
 
     background: -moz-linear-gradient(top,#98978c 0%,#2e2e2e);
-    background: -webkit-gradient(linear, left top, left bottom, 
-        from(#98978c),to(#2e2e2e));
+    background: -webkit-gradient(linear, left top, left bottom, from(#98978c),to(#2e2e2e));
+    background: -ms-linear-gradient(top, #98978c, #2e2e2e);
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius:6px;
