--- a/css/themes/mobile.css
+++ b/css/themes/mobile.css
@@ -69,7 +69,7 @@ html, body, #calc {
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius:6px;
-    border: 1px outset #e5e3e3;
+    border: 1px outset #000000;
     -moz-box-shadow:2px 1px 4px 2px rgba(150,150,150,0.3),
                     /*inset 0px 0px 1px rgba(255,000,217,1);*/
                     inset 2px 2px 3px 0 #3d3b3b;
